--- a/src/carousel/_carouselBreakpoints.scss
+++ b/src/carousel/_carouselBreakpoints.scss
@@ -38,6 +38,9 @@
                 height: 100%;
                 width: 100%;
                 margin-bottom: 2rem;
+                .text-container, h3{
+                    font-size: 0.9rem;
+                }
             }
         }
     }
